package com.simplecash.dto;

public record ConseillerDTO(
        Long id,
        String nom,
        String prenom,
        String agenceId
) {
}
