package com.simplecash.dto;

public record GerantDTO(
        Long id,
        String nom,
        String prenom,
        String agenceId
) {
}
